...
  } else {
    LazyColumn(
        modifier =
            Modifier.fillMaxSize()
                .padding(horizontal = MEDIUM_PADDING.dp)
                .background(Color(MAIN_BACKGROUND))
                .testTag("SignUpColumn"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(MEDIUM_PADDING.dp),
    ) {

      // Profile Picture
      item {
        Spacer(modifier = Modifier.height(EXTRA_LARGE_PADDING.dp))
        ProfileImage(
            userId = FirebaseAuth.getInstance().currentUser?.uid ?: "",
            modifier = Modifier.size(150.dp).clip(CircleShape).testTag("profilePicture"),
            imageViewModel,
            bitmap = selectedBitmap,
            editing = true)
        if (isDefaultImageOpen) {
          DefaultImageCarousel(
              onImageSelected = { bitmap ->
                selectedBitmap = bitmap
                isDefaultImageOpen = false
              },
              context = context,
              onDismiss = { isDefaultImageOpen = false })
        }
        ModifyPictureButton(showDialogImage = { showDialogImage = true })
      }

      // Email Field
      item {
        EmailTextField(
            email = emailState.value,
            onEmailChange = {
              emailState.value = it
              emailErrorState.value = if (it.isBlank()) "Email cannot be empty" else null
            },
            emailError = emailErrorState.value)
      }

      // Password Field
      item {
        PasswordTextField(
            password = passwordState.value,
            onPasswordChange = { passwordState.value = it },
            isPasswordVisible = isPasswordVisible.value,
            onPasswordVisibilityChange = { isPasswordVisible.value = !isPasswordVisible.value },
            passwordError = passwordErrorState.value)
      }
...
              TextFieldWithErrorState(
                  value = name,
                  onValueChange = { name = it },
                  label = "Name",
                  validation = { input -> if (input.isBlank()) "Name cannot be empty" else null },
                  externalError = nameErrorState.value,
                  errorTestTag = "nameError",
                  testTag = "nameTextField",
                  modifier = Modifier.weight(1f))
              TextFieldWithErrorState(
                  value = surname,
                  onValueChange = { surname = it },
                  label = "Surname",
                  validation = { input ->
                    if (input.isBlank()) "Surname cannot be empty" else null
                  },
                  externalError = surnameErrorState.value,
                  errorTestTag = "surnameError",
                  testTag = "surnameTextField",
                  modifier = Modifier.weight(1f))
            }
      }

      // Interests Section
      item { ManageInterests(initialInterests = interests, onUpdateInterests = { interests = it }) }
...
                          },
                          onError = { error -> errorMessage = error.message })
                    })
              }
            },
            modifier =
                Modifier.fillMaxWidth().height(AUTH_BUTTON_HEIGHT.dp).testTag("SignUpButton"),
            shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
            border = BorderStroke(BORDER_STROKE_SM.dp, Color.Transparent),
            colors =
                ButtonDefaults.buttonColors(
                    containerColor = Color(MAIN_COLOR_DARK), contentColor = Color.White)) {
              Text("SIGN UP", fontSize = SUBTITLE_FONTSIZE.sp)
...
      }

      // Already Have an Account Button
      item {
        TextButton(
            onClick = { navigationActions.navigateTo(Screen.AUTH) },
            modifier = Modifier.testTag("GoToSignInButton"),
            colors = ButtonDefaults.textButtonColors(contentColor = Color(MAIN_COLOR_DARK))) {
              Text("Already an account? Sign-in")
            }
      }
    }
  }
...
