...
                      IconButton(onClick = onPasswordVisibilityChange) {
                        Icon(
                            imageVector =
                                if (isPasswordVisible) Icons.Filled.Visibility
                                else Icons.Filled.VisibilityOff,
                            contentDescription =
                                if (isPasswordVisible) "Hide password" else "Show password")
                      }
                    },
                    colors =
                        TextFieldDefaults.colors(
                            focusedContainerColor = Color.Transparent,
                            unfocusedContainerColor = Color.Transparent,
...
      Text(
          text = it,
          color = Color.Red,
          modifier =
              Modifier.align(Alignment.Start)
                  .padding(start = MEDIUM_PADDING.dp, top = (MEDIUM_PADDING / 2).dp)
                  .testTag("PasswordErrorText"))
    }
  }
}

@Composable
fun EmailTextField(
...
      Text(
          text = it,
          color = Color.Red,
          modifier =
              Modifier.align(Alignment.Start)
                  .padding(start = MEDIUM_PADDING.dp, top = (MEDIUM_PADDING / 2).dp)
                  .testTag("EmailErrorText"))
    }
  }
}

@Composable
fun TextFieldWithErrorState(
...
